--- a/src/status.html
+++ b/src/status.html
@@ -1,6 +1,12 @@
 <html>
-    <body>test</body>
-    <input type="text" id ="input">
-    <div id="status"></div>
-    <script>require('./status')</script>
+    <head>
+        <link rel="stylesheet" href="status.css">
+    </head>
+    <body>
+        <div class="container">
+            <input type="text" id="input" class="input">
+            <div id="status" class="status"></div>
+        </div>
+        <script>require('./status')</script>
+    </body>
 </html>
