--- a/src/status.html
+++ b/src/status.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div class="container">
-            <input type="text" id="input" class="input">
+            <input type="text" id="input" class="input" value="./">
             <div id="status" class="status"></div>
         </div>
         <script>require('./status')</script>
